gccida/g2/gen_lowpart
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_lowpart/src/emit-rtl.c:1624:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart( machine_mode mode, rtx x) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_lowpart/src/emit-rtl.c:1648:18: error: use of undeclared identifier 'machine_mode'
x = force_reg( ( machine_mode)*( ( unsigned __int8 *)x + 2), x); 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_lowpart/src/obj/emit-rtl.o] Error 1
